--- a/src/style.css
+++ b/src/style.css
@@ -16,29 +16,25 @@ Bambay          #AEAEAF
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    list-style: none;
+    text-decoration: none;
     font-family: "Satoshi", sans-serif;
 }
 
 body{
-    max-height: 100%;
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 h1, h2{
     padding-block: 2rem;    
 }
 
-/* .container {
-    width: 1200px;
-    max-width: 90%;
-    margin: 0 auto;
-    padding: 50px 0;
-} */
-
 a{
-    text-decoration: none;
     color: #AEAEAF;
 }
 
@@ -69,45 +65,45 @@ p{
     margin-block: 10px;
 }
 
-nav{
+nav, footer{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     flex-wrap: wrap;
+    gap: 1em;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-item{
+    flex: none;
+    width: 260px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
 
 .logo{
-    width: 100px;
+    height: 100px;
+    width: auto;
 }
-
-ul{
-    display: flex;
-}
-
-nav li {
-    list-style: none;
-    margin: 0 25px;
-}
-
 
 section{
     width: 100%;
     height: fit-content;
-    padding-block: 6rem;
-    padding-inline: 3rem;
+    padding-block: 5rem;
+    padding-inline: 2rem;
     height: minmax(300px, 600px);
 }
 
-.wrapper{
-    padding: 2rem;
-}
+
 
 /* HERO SECTION */
 
 .hero{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    column-gap: 1rem;
+    row-gap: 2rem;
     justify-items: center;
     align-items: center;
 }
@@ -117,8 +113,9 @@ section{
 }
 
 .hero-image{
-    width: 100px;
+    width: 200px;
     height: auto;
+    border-radius: 50%;
 }
 
 .project{
@@ -132,23 +129,8 @@ section{
 /* FOOTER */
 
 footer{
-    /* border-top: 1px solid #AEAEAF; */
-    box-shadow: 1px 1px 2px 2px #555;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1rem;
+    box-shadow: 1px 1px 2px 2px #AEAEAF;
     width: 100%;
-}
-
-footer ul{
-    flex-direction: row;
-    gap:1rem;
-}
-
-footer li{
-    list-style: none;
-    margin: 0 25px;
 }
 
 /* CONTACT */
@@ -208,6 +190,10 @@ input[type=submit]:hover {
 
 /* FEATURED PROJECT */
 
+.portfolio-project-header{
+    text-align: center;
+}
+
 .media-view{
     background-color: #AEAEAF;
     width: 200px;
@@ -217,4 +203,10 @@ input[type=submit]:hover {
 .project-problem{
     background-color: #1D7A85;
     color: #FFFFFF;
+    padding:10px;
+}
+
+.project-solution{
+    margin-top: 10px;
+    background-color: #AEAEAF;
 }
